# pirozhok

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  admin_handlers.py  audio.py  bot.py  db.py  docker-compose.yml  files.py  handlers.py  memory.py  meta_tools.py  openrouter.py  prompt.txt  pyproject.toml  ratelimit.py  requirements.txt  settings.py  skills.py  weather.py
.claude/skills/deploy/: SKILL.md
scripts/: deploy.sh
searxng/: settings.yml
skills/: ganvest_slang.md
src/pirojok/: __main__.py
src/pirojok/bot/: admin_handlers.py  handlers.py  tg_format.py
src/pirojok/services/: files.py  images.py  meta_tools.py  openrouter.py  search.py
src/pirojok/storage/: memory.py
