[project]
name = "pirojok"
version = "0.1.0"
description = "Пирожок — живой Telegram-бот на OpenRouter с памятью, поиском, погодой и работой с медиа"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot==22.*",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.20.0",
    "qdrant-client[fastembed]>=1.9.0",
    "redis>=5.0.0",
    "pyyaml>=6.0",
    "telegramify-markdown>=1.2.0",
]

[project.scripts]
pirojok = "pirojok.__main__:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pirojok"]
